# LED-Animation-Manager

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: main.yml  release.yml
ci/: ubuntu-install-packages
controller/: .env.example  README.md  justfile  pubspec.yaml
controller/android/app/: build.gradle
controller/android/app/src/main/: AndroidManifest.xml
controller/android/app/src/profile/: AndroidManifest.xml
controller/ios/Runner/: Info.plist
controller/ios/Runner.xcodeproj/: project.pbxproj
controller/lib/: add_layer_page.dart  alert.dart  detail_view.dart  main.dart  settings.dart  text_input_page.dart
controller/lib/api/: README.md
controller/lib/api/.openapi-generator/: FILES
controller/lib/api/doc/: ColorProp.md  CropFilterProps.md  ErrorResponse.md  ErrorResponseOneOf.md  ErrorResponseOneOf1.md  ErrorResponseOneOf2.md  ManipulateLayerApi.md  TimerProps.md
controller/lib/api/lib/: api.dart  api_client.dart
controller/lib/api/lib/api/: manipulate_layer_api.dart
controller/lib/api/lib/model/: color_prop.dart  crop_filter_props.dart  error_response.dart  error_response_one_of.dart  error_response_one_of1.dart  error_response_one_of2.dart  timer_props.dart
controller/lib/api/test/: color_prop_test.dart  crop_filter_props_test.dart  error_response_one_of1_test.dart  error_response_one_of2_test.dart  error_response_one_of_test.dart  error_response_test.dart  manipulate_layer_api_test.dart  timer_props_test.dart
controller/linux/: CMakeLists.txt
controller/macos/Runner.xcodeproj/: project.pbxproj
controller/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
controller/macos/Runner/Configs/: AppInfo.xcconfig
controller/web/: index.html
controller/windows/: CMakeLists.txt
layers/: Cargo.toml
layers/animation_macro/: Cargo.toml
layers/animation_macro/src/: lib.rs
layers/src/: lib.rs  none.rs  rainbow_wheel.rs
layers/src/filter/: crop.rs  mod.rs
layers/src/info_layers/: timer.rs
layers/src/rainbow_layers/: mod.rs  wheel.rs
layers/src/static_layers/: color.rs
led-client/: .env.example  Cargo.toml  README.md  led-controller-client.service
led-client/src/: main.rs  state.rs  strip.rs
prisma/: Cargo.toml  README.md
prisma/src/: impl_macros.rs  lab.rs  linalg.rs  rgb.rs  rgi.rs  xyy.rs  xyz.rs
prisma/src/channel/: bounded_channel.rs  cast.rs
prisma/src/color_space/: color_space.rs
server/: .env.example  Cargo.toml  README.md  led-controller-server.service
server/api/: openapi.json  openapi.yaml
server/src/: auth.rs  main.rs  manipulate_layer.rs  state.rs  websocket.rs
