[package]
name = "layers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
prisma = { path = "../prisma/" }
lazy_static = "1.4"
angular-units = { version = "0.2.4", features = ["serde"] }
uuid = { version = "1.1.0", features = ["v4", "serde"] }
log = "0.4"
