[package]
name = "led-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

layers = { path = "../layers/"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
url = "2.2"

log = "0.4"
env_logger = "0.9"

fps_clock = "2.0"
ws2818-rgb-led-spi-driver = "2.0.0"
lazy_static = "1.4"

diplomatic-bag = "0.3.1"
