[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

layers = { path = "../layers" }

actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.1"
actix-cors = "0.6.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.1.0", features = ["v4"] }

log = "0.4"
dotenv = "0.15"

lazy_static = "1.4"
